# libraryapi

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  docker-compose.yml  docker-compose.yml.EXAMPLE_PRODUCTION  pergamumSoap-MarcXML.xsl  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml  lint.yml  snyk.yml  tests.yml
app/: error.py  main.py  util.py
libraryapi/: pergamum.py  util.py
tests/: test_api.py
