[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "libraryapi"
version = "1.0.0"
description = "An API to get MARC data from Pergamum."
authors = ["Vítor <vitor.silverio.rodrigues@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "==0.115.7"
pymarc = "==5.2.3"
uvicorn = {version = "==0.34.0", extras = ["standard"]}
xmltodict = "==0.14.2"
zeep = {version = "==4.3.1", extras = ["async"]}
httpx = "==0.27.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "==4.1.0"
pytest = "==8.3.4"
pipenv = "==2024.4.1"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
